# second-brain

./: .env.example  .gitignore  .pre-commit-config.yaml  .secondbrainignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  personal-agentic-second-brain-prd-v2.md  personal-agentic-second-brain-prd.md  pyproject.toml
.github/workflows/: secret-scan.yml
demo/notes/: 2026-04-15-reporting-perf.md  2026-06-01-falcon-sync.md  2026-06-05-acme-q3.md  2026-06-08-internal-tool.md  2026-06-10-vendor-spike.md  2026-06-12-phoenix-update.md  2026-06-18-remote-notes.md  2026-06-20-phoenix-feedback.md  2026-06-22-phoenix-risks.md  2026-06-25-phoenix-wrap.md
docs/: autonomous-loop-prompt.md  data-zones.md  problem-evidence.md  progress.md
docs/adr/: 001-vector-store-and-models.md  002-chunking-contract.md
eval/: golden_queries.yaml
src/second_brain/: __init__.py  chunker.py  cli.py  embeddings.py  eval_harness.py  ingest.py  models.py  reflect.py  retriever.py  store.py  synthesizer.py  verifier.py
tests/: test_chunker.py  test_eval_harness.py  test_ingest.py  test_metadata.py  test_retriever.py  test_store.py  test_synthesizer.py
