[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "0.0.1"
description = "Personal Agentic Second Brain (sb)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.7.0",
    "tiktoken>=0.7.0",
    "lancedb>=0.5.0",
    "ollama>=0.3.0",
    "litellm>=1.30.0",
]

[project.scripts]
sb = "second_brain.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]